--- a/splendid/layout/main.html
+++ b/splendid/layout/main.html
@@ -6,23 +6,19 @@
     <div class="table">
       <div class="left-column">
         <div class="logo">
-          <img src="img/logo.jpg" alt="splendid logo">
-        </div>
-        <div class="badges">
-          <github-badge name="splendid" org="artdecocode" />
-          <npm-badge package="splendid">_Splendid_</npm-badge>
+          <img webp="photo" responsive-max="250" responsive sizes="250px" src="img/logo.jpeg" alt="Anton CPHT Graduation Photo" />
         </div>
 
         ### Pages
 
         <Pages />
 
-        ### npm links
+        <!-- ### npm links -->
 
-        <ul>
+        <!-- <ul>
           * [splendid](https://www.npmjs.com/package/splendid)
           * [mnp](https://www.npmjs.com/package/mnp)
-        </ul>
+        </ul> -->
       </div>
       <div class="right-column" id="Content">
         {{ content }}
